k8s/kustomize/overlays/activejob-only/active-job-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdo-active-job-worker
  labels:
    app.kubernetes.io/component: active-job-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: active-job-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/component: active-job-worker
    spec:
      containers:
        - name: active-job-worker
          image: code-dot-org:latest
          imagePullPolicy: Never
          command:
            - zsh
            - -c
          args:
            - cd dashboard && RAILS_ENV=adhoc RACK_ENV=adhoc bundle exec bin/delayed_job run
          tty: true
          resources:
            requests:
              cpu: 1
              memory: 2Gi
              ephemeral-storage: 30Gi
            limits:
              cpu: 1
              memory: 2Gi
              ephemeral-storage: 30Gi
          securityContext:
            allowPrivilegeEscalation: true
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      enableServiceLinks: false
