k8s/kustomize/overlays/activejob-only/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdo-dashboard
spec:
  template:
    spec:
      containers:
        - name: dashboard
          imagePullPolicy: IfNotPresent
          command:
            - zsh
            - -c
          args:
            - sleep infinity
          resources:
            requests:
              cpu: 1
              memory: 2Gi
              ephemeral-storage: 30Gi
            limits:
              cpu: 1
              memory: 2Gi
              ephemeral-storage: 30Gi
          startupProbe: null
          readinessProbe: null
          livenessProbe: null
