k8s/kustomize/overlays/activejob-only/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdo-dashboard
$patch: delete
